<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/searchbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/string_station_name" />

            <Button
                android:id="@+id/searchbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/btn_search" />
        </LinearLayout>

        <ImageView
            android:id="@+id/image"
            android:layout_width="200dip"
            android:layout_height="200dip"
            android:layout_below="@id/search"
            android:alpha="0.6"
            android:src="@drawable/sunny" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/search"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#66000000"
                android:padding="3dp"
                android:text="@string/txt_open"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/temperature_matin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#66000000"
                android:padding="3dp"
                android:text="@string/txt_temperature_matin"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/temperature_midi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#66000000"
                android:padding="3dp"
                android:text="@string/txt_temperature_midi"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/vitesse_vent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#66000000"
                android:padding="3dp"
                android:text="@string/txt_wind_speed"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/niveau_neige"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#66000000"
                android:padding="3dp"
                android:text="@string/txt_snow_level"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>